--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-three/drei": "^10.0.8",
     "@react-three/fiber": "^9.1.2",
     "classnames": "^2.5.1",
+    "motion": "^12.18.1",
     "next": "15.1.8",
     "next-intl": "^4.1.0",
     "radix-ui": "^1.4.2",
