--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "motion": "^12.18.1",
     "next": "15.1.8",
     "next-intl": "^4.1.0",
+    "next-themes": "^0.4.6",
     "radix-ui": "^1.4.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
