--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.2",
     "@radix-ui/colors": "^3.0.0",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/themes": "^3.2.1",
-    "@react-three/drei": "^10.0.8",
-    "@react-three/fiber": "^9.1.2",
     "classnames": "^2.5.1",
+    "gsap": "^3.13.0",
     "motion": "^12.18.1",
     "next": "15.1.8",
     "next-intl": "^4.1.0",
