--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "radix-ui": "^1.4.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "three": "^0.176.0"
+    "three": "^0.176.0",
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@types/node": "^20",
