--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@radix-ui/colors": "^3.0.0",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/themes": "^3.2.1",
+    "@vercel/analytics": "^1.5.0",
     "classnames": "^2.5.1",
     "gsap": "^3.13.0",
+    "maplibre-gl": "^5.6.1",
     "motion": "^12.18.1",
     "next": "15.1.8",
     "next-intl": "^4.1.0",
@@ -22,6 +24,7 @@
     "radix-ui": "^1.4.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-map-gl": "^8.0.4",
     "react-responsive": "^10.0.1",
     "three": "^0.176.0",
     "zustand": "^5.0.6"
